Fixed modal box being too wide on small screens

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -24,6 +24,7 @@
 @media all and (max-width:  600px) {
   .modal-wrapper > .modal{
     width: 95%;
+    min-width: auto;
   }
 }
 
